--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,12 @@
     "files.associations": {
         "fdf.h": "c",
         "macros.h": "c",
-        "libft.h": "c"
+        "libft.h": "c",
+        "mlx.h": "c",
+        "stdlib.h": "c",
+        "keysym.h": "c",
+        "fcntl.h": "c",
+        "stdio.h": "c",
+        "math.h": "c"
     }
 }
